fix lane overview alignment

--- a/scopes/docs/docs/overview/overview.module.scss
+++ b/scopes/docs/docs/overview/overview.module.scss
@@ -12,11 +12,12 @@
     align-items: center;
     flex: 1;
     min-width: 0;
-    padding: 24px 0px 16px 32px;
+    padding: 24px 0px 24px 32px;
+    font-size: var(--bit-p-xs);
+
     .laneName {
       overflow: hidden;
       white-space: nowrap;
-      font-size: large;
       padding: 0px 8px;
     }
   }
